# lsd-seg

./: .gitignore  README.md  pyproject.toml
assets/: README.md
configs/: default.yaml  experiments.yaml  public_datasets.yaml  sam2.example.yaml
docs/: extended_results.md  hyperparameter_protocol.md  limitations.md  prompt_sensitivity.md  reproducibility.md  reviewer_addendum.md  runtime_memory.md  statistical_testing.md  subdomain_vs_capacity.md  unseen_subdomain_behavior.md
scripts/: analyze_results.py  analyze_subdomain_capacity.py  analyze_unseen_subdomain.py  build_subdomains.py  compute_statistical_tests.py  evaluate.py  inspect_sam2_features.py  make_reviewer_tables.py  prompt_sensitivity.py  run_all_experiments.py  run_prompt_sensitivity.py  smoke_test.py  summarize_runtime_memory.py  sync_readme_assets.py  train.py  validate_public_repo.py
src/dsm/: __init__.py  config.py  losses.py  metrics.py
src/dsm/data/: __init__.py  base.py  datamodule.py  datasets.py  schemas.py  subdomains.py  transforms.py
src/dsm/engine/: evaluator.py  trainer.py
src/dsm/experiments/: __init__.py  analyses.py  base.py  baselines.py  ensemble.py  external.py  native.py  ours.py  runner.py  specs.py
src/dsm/models/: __init__.py  adapters.py  backbones.py  baselines.py  decoder.py  descriptor.py  full_model.py  prototype.py  routing.py  unet.py
src/dsm/prompts/: __init__.py  auto_prompt.py
src/dsm/utils/: decorators.py  registry.py  reproducibility.py
