[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-subdomain-segmentation"
version = "0.1.0"
description = "Publication-ready implementation of dynamic sub-domain modeling for robust medical image segmentation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Anonymous Authors" }
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "seaborn>=0.13",
  "torch>=2.3",
  "torchvision>=0.18",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
